--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -34,7 +34,7 @@
                                     </div>
 
                                     <div class="mx-auto mb-2 w-80 text-center">
-                                        <a class="btn btn-connection text-connection w-80 mt-3" href="https://insiti.com/login/source/masterclass" target="_blank">Connexion</a>
+                                        <a class="btn btn-connection text-connection w-80 mt-3" href="https://www.insiti.com/login/source/masterclass" target="_blank">Connexion</a>
                                     </div>
 
                                     <div class="text-center mt-1 mb-7">
