--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -12,7 +12,7 @@
 
                     <div class="col-3 col-lg-9 d-flex justify-content-end align-content-center">
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
-                            <a href="#" target="#">Blog</a>
+                            <a href="landing/blog" target="#">Blog</a>
                             <div class="read-more">
                                 <a href="#" data-toggle="modal" data-target="#modalinSiti">INSCRIPTION</a>
                             </div>
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="hero-content-wrap d-flex flex-column justify-content-center align-items-start">
+                    <div class="hero-content-wrap d-flex flex-column justify-content-center align-items-start pt-5">
                         <header class="entry-header">
                             <h1>La formation pour <strong>ouvrir une franchise </strong></h1>
                             <h4 class="mt-5">
@@ -161,11 +161,11 @@
 
             <div class="col-12 col-lg-6">
                 <div class="course-content d-flex flex-wrap h-80 justify-content-between align-content-lg-stretch">
-                    <figure class="course-thumbnail">
+                    <figure class="course-thumbnail featured_course--image-width">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc1.jpg'), :alt => "Image" %>
                     </figure><!-- .course-thumbnail -->
 
-                    <div class="course-content-wrap">
+                    <div class="course-content-wrap featured_course--content-width">
                         <header class="entry-header">
                             <h2 class="entry-title mb-3">
                                 Choisir sa franchise / Etablir le contact avec les franchiseurs
@@ -181,11 +181,11 @@
 
             <div class="col-12 col-lg-6">
                 <div class="course-content d-flex flex-wrap h-80 justify-content-between align-content-lg-stretch">
-                    <figure class="course-thumbnail">
+                    <figure class="course-thumbnail featured_course--image-width">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc2.jpg'), :alt => "Image" %>
                     </figure><!-- .course-thumbnail -->
 
-                    <div class="course-content-wrap">
+                    <div class="course-content-wrap featured_course--content-width">
                         <header class="entry-header">
                             <h2 class="entry-title mb-3">
                                 Commencer l’étude de marché
@@ -201,11 +201,11 @@
 
             <div class="col-12 col-lg-6">
                 <div class="course-content d-flex flex-wrap h-80 justify-content-between align-content-lg-stretch">
-                    <figure class="course-thumbnail">
+                    <figure class="course-thumbnail featured_course--image-width">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc3.jpg'), :alt => "Image" %>
                     </figure><!-- .course-thumbnail -->
 
-                    <div class="course-content-wrap">
+                    <div class="course-content-wrap featured_course--content-width">
                         <header class="entry-header">
                             <h2 class="entry-title mb-3">
                                 Monter son dossier bancaire
@@ -222,11 +222,11 @@
 
             <div class="col-12 col-lg-6">
                 <div class="course-content d-flex h-80 flex-wrap justify-content-between align-content-lg-stretch">
-                    <figure class="course-thumbnail">
+                    <figure class="course-thumbnail featured_course--image-width">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/bg-shapes/fc4.jpg'), :alt => "Image" %>
                     </figure><!-- .course-thumbnail -->
 
-                    <div class="course-content-wrap">
+                    <div class="course-content-wrap featured_course--content-width">
                         <header class="entry-header">
                             <h2 class="entry-title mb-3">
                                Cibler les locaux potentiels
@@ -255,8 +255,8 @@
             </div><!-- .col -->
 
             <div class="col-12 col-lg-6 align-content-lg-stretch">
-                <header class="heading">
-                    <p class="text-justify">
+                <header class="heading p-0">
+                    <p class="text-left">
                         Une masterclass inSiti est une journée de 5h de formation intensive, en groupe de 8 à 15 personnes, 
                         avec des intervenants professionnels. Ce format est idéal pour mettre en place et accélérer votre 
                         projet de création de commerce. Choix de l’activité et de l’enseigne, dossier bancaire, ciblage du local. 
