--- a/app/views/landing/blogPage.html.erb
+++ b/app/views/landing/blogPage.html.erb
@@ -11,6 +11,7 @@
 
                     <div class="col-3 col-lg-9 d-flex justify-content-end align-content-center">
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
+                            <a href="blog" target="#">Blog</a>
                             <div class="read-more">
                                 <a href="#" data-toggle="modal" data-target="#modalinSiti">INSCRIPTION</a>
                             </div>
