--- a/frontend/init/stylesheet/style.css
+++ b/frontend/init/stylesheet/style.css
@@ -260,7 +260,7 @@ p{
 /* Featured section */
 
 .featured-courses.horizontal-column, .featured-courses.vertical-column {
-  padding: 100px 0;
+  padding: 100px 0 50px 0;
   background: #fff;
 }
 
@@ -719,6 +719,19 @@ p.footer-copyright {
 
   .hero-content-wrap .read-more {
     margin-top: 20px;
+  }
+
+  
+}
+
+@media screen and (max-width: 500px){
+  .featured_course--image-width{
+    width: 100% !important;
+  }
+
+  .featured_course--content-width{
+    width: 320px !important;
+    padding: 10px 10px 20px 10px !important;
   }
 }
 
