--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -6,7 +6,11 @@
                 <div class="row">
                     <div class="col-9 col-lg-3">
                         <div class="site-branding">
-                            <h2 class="site-title"><a href="index" rel="home">inSiti<span> Masterclass</span></a></h2>
+                            <h2 class="site-title">
+                                <%= link_to root_url, rel: 'home' do %>
+                                    inSiti<span> Masterclass</span>
+                                <% end %>
+                            </h2>
                         </div><!-- .site-branding -->
                     </div><!-- .col -->
 
